--- a/app/src/main/res/layout/fragment_blank_fragment2.xml
+++ b/app/src/main/res/layout/fragment_blank_fragment2.xml
@@ -9,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Fragment 2"
-        android:background="#33b0ee"/>
+        android:background="#aabf33"/>
 
 </FrameLayout>
