--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,7 +17,8 @@
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:layout_marginTop="15dp"
-
+        android:clickable="true"
+        android:id="@+id/userImage"
         android:src="@drawable/user"/>
 
     <TextView
