--- a/app/src/main/res/layout/tab_fragment2_kund.xml
+++ b/app/src/main/res/layout/tab_fragment2_kund.xml
@@ -80,10 +80,11 @@
         android:ems="10"
         android:id="@+id/editText8"
         android:layout_below="@+id/spinner"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="56dp" />
 
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:entries="@array/antal_våningsplan"
         android:id="@+id/spinner2"
@@ -97,40 +98,19 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Energibesparande åtgärd senaste år:"
         android:id="@+id/textView5"
-        android:layout_below="@+id/radioButton3"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="31dp" />
+        android:layout_above="@+id/radioGroup2"
+        android:layout_alignParentStart="true" />
 
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Friliggande hus"
-        android:id="@+id/radioButton3"
-        android:layout_below="@+id/radioButton4"
-        android:layout_alignStart="@+id/radioButton4" />
 
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gavelhus"
-        android:id="@+id/radioButton4"
-        android:layout_below="@+id/radioButton5"
-        android:layout_alignStart="@+id/radioButton5" />
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mellanliggande hus"
-        android:id="@+id/radioButton5"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/seekBar2" />
 
     <RadioGroup
-        android:layout_width="220dp"
-        android:layout_height="100dp"
-        android:layout_below="@+id/radioButton3"
-        android:layout_alignEnd="@+id/editText8"
-        android:layout_marginTop="74dp">
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="43dp"
+        android:id="@+id/radioGroup2">
         
         <RadioButton
             android:layout_width="wrap_content"
@@ -145,6 +125,32 @@
             android:text="Nej"
             android:id="@+id/energibesparande_nej"
             android:checked="false" />
+
+    </RadioGroup>
+
+    <RadioGroup
+        android:layout_width="300dp"
+        android:layout_height="160dp"
+        android:orientation="vertical"
+        android:layout_alignBottom="@+id/radioGroup2"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="79dp">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Friliggande hus"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Gavelhus"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Mellanliggande hus"/>
+
 
     </RadioGroup>
 
