--- a/app/src/main/res/layout/tab_fragment4_kund.xml
+++ b/app/src/main/res/layout/tab_fragment4_kund.xml
@@ -95,13 +95,47 @@
         android:layout_alignEnd="@+id/textView11"
         android:layout_marginTop="67dp" />
 
-    <CheckBox
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Klar"
-        android:id="@+id/checkBox2"
-        android:layout_marginBottom="45dp"
+        android:id="@+id/button3"
         android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/textView11" />
+        android:layout_alignStart="@+id/editText26"
+        android:layout_marginBottom="57dp" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bq"
+        android:id="@+id/checkBox"
+        android:layout_alignTop="@+id/editText24"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Kort/Lång"
+        android:id="@+id/checkBox2"
+        android:layout_below="@+id/editText24"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nej ingen radon"
+        android:id="@+id/checkBox6"
+        android:layout_alignTop="@+id/editText25"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="date"
+        android:ems="10"
+        android:hint="Datum"
+        android:id="@+id/editText7"
+        android:layout_alignBottom="@+id/editText26"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
