--- a/app/src/main/res/layout/tab_fragment3_rond.xml
+++ b/app/src/main/res/layout/tab_fragment3_rond.xml
@@ -3,10 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="horizontal"
     tools:context="com.venovu.energiklart.Tab_Fragment3_Rond">
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/separatorLine"
+        android:layout_marginTop="100dp"
+        android:id="@+id/view" />
+
 
 </RelativeLayout>
