--- a/app/src/main/res/layout/tab_fragment4_kund.xml
+++ b/app/src/main/res/layout/tab_fragment4_kund.xml
@@ -107,7 +107,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bq"
+        android:text="Bq Ja"
         android:id="@+id/checkBox"
         android:layout_alignTop="@+id/editText24"
         android:layout_alignParentStart="true" />
@@ -137,5 +137,13 @@
         android:id="@+id/editText7"
         android:layout_alignBottom="@+id/editText26"
         android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bq Nej"
+        android:id="@+id/checkBox17"
+        android:layout_alignTop="@+id/checkBox"
+        android:layout_alignEnd="@+id/textView9" />
 
 </RelativeLayout>
