*Home button in navigation drawer now actually shows the home fragment
**Username passed from Login_activity to Main_activity to show the logged in username in the navigation header

***Implemented basic security after a user is logged in. The user can no longer backtrack to the recent activity. After logged in, the backstack history is deleted

--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -32,4 +32,14 @@
         android:layout_marginTop="79dp"
         android:id="@+id/buttonRond" />
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button5"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="61dp" />
+
 </RelativeLayout>
