--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -25,7 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Christoffer Nordfeldt"
+        android:text="@string/nav_header_not_logged_in"
+        android:id="@+id/nav_header_user"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
