--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,6 +23,7 @@
     <item android:title="">
         <menu>
             <item
+                android:visible="false"
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_exit_to_app_black_24dp"
                 android:title="Logga ut" />
