--- a/app/src/main/res/layout/tab_fragment2_kund.xml
+++ b/app/src/main/res/layout/tab_fragment2_kund.xml
@@ -28,9 +28,9 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:entries="@array/antal_boende"
-        android:id="@+id/spinner"
+        android:id="@+id/boendeSpinner"
         android:layout_marginTop="100dp"
-        android:layout_below="@+id/editText20"
+        android:layout_below="@+id/bostadTemp"
         android:layout_alignParentStart="true" />
 
     <EditText
@@ -39,7 +39,7 @@
         android:inputType="number"
         android:hint="Nybyggnadsår"
         android:ems="10"
-        android:id="@+id/editText8"
+        android:id="@+id/byggÅr"
         android:layout_above="@+id/radioGroup3"
         android:layout_alignParentStart="true" />
 
@@ -47,9 +47,9 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:entries="@array/antal_våningsplan"
-        android:id="@+id/spinner2"
-        android:layout_alignTop="@+id/spinner"
-        android:layout_toEndOf="@+id/spinner" />
+        android:id="@+id/våningSpinner"
+        android:layout_alignTop="@+id/boendeSpinner"
+        android:layout_toEndOf="@+id/boendeSpinner" />
 
 
     <TextView
@@ -100,17 +100,20 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="Friliggande hus"/>
+            android:text="Friliggande hus"
+            android:id="@+id/friliggande" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="Gavelhus"/>
+            android:text="Gavelhus"
+            android:id="@+id/gavel" />
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="Mellanliggande hus"/>
+            android:text="Mellanliggande hus"
+            android:id="@+id/mellanHus" />
 
 
     </RadioGroup>
@@ -121,7 +124,7 @@
         android:inputType="number"
         android:ems="10"
         android:hint="Temp vintertid bostad"
-        android:id="@+id/editText20"
+        android:id="@+id/bostadTemp"
         android:layout_below="@+id/view"
         android:layout_alignParentStart="true"
         android:layout_marginTop="40dp" />
@@ -132,8 +135,8 @@
         android:inputType="number"
         android:ems="10"
         android:hint="Temp vintertid källare"
-        android:id="@+id/editText21"
-        android:layout_alignTop="@+id/editText20"
+        android:id="@+id/källarTemp"
+        android:layout_alignTop="@+id/bostadTemp"
         android:layout_toEndOf="@+id/textView5"
         android:layout_marginStart="56dp" />
 
