--- a/app/src/main/res/layout/tab_fragment3_kund.xml
+++ b/app/src/main/res/layout/tab_fragment3_kund.xml
@@ -42,7 +42,7 @@
     <EditText
         android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:id="@+id/editText9"
+        android:id="@+id/panna"
         android:hint="Typ av panna"
         android:layout_marginTop="32dp"
         android:layout_below="@+id/view2"
@@ -62,8 +62,8 @@
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:hint="Märke"
-        android:id="@+id/editText10"
-        android:layout_below="@+id/editText9"
+        android:id="@+id/märke"
+        android:layout_below="@+id/panna"
         android:layout_alignParentStart="true"
         android:layout_marginTop="40dp" />
 
@@ -73,8 +73,8 @@
         android:inputType="number"
         android:ems="10"
         android:hint="Tillverkningsår"
-        android:id="@+id/editText11"
-        android:layout_below="@+id/editText10"
+        android:id="@+id/tillvÅr"
+        android:layout_below="@+id/märke"
         android:layout_alignParentStart="true"
         android:layout_marginTop="40dp"/>
 
@@ -84,8 +84,8 @@
         android:inputType="number"
         android:ems="10"
         android:hint="Beredarvolym"
-        android:id="@+id/editText12"
-        android:layout_below="@+id/editText11"
+        android:id="@+id/volym"
+        android:layout_below="@+id/tillvÅr"
         android:layout_alignParentStart="true"
         android:layout_marginTop="40dp" />
 
@@ -106,8 +106,8 @@
         android:inputType="number"
         android:hint="kWh /år"
         android:ems="10"
-        android:id="@+id/editText13"
-        android:layout_above="@+id/editText10"
+        android:id="@+id/kwÅr"
+        android:layout_above="@+id/märke"
         android:layout_alignParentEnd="true" />
 
     <EditText
@@ -116,8 +116,8 @@
         android:inputType="date"
         android:hint="period datum ett år"
         android:ems="10"
-        android:id="@+id/editText14"
-        android:layout_alignTop="@+id/editText10"
+        android:id="@+id/period"
+        android:layout_alignTop="@+id/märke"
         android:layout_alignParentEnd="true" />
 
     <EditText
@@ -126,8 +126,8 @@
         android:inputType="number"
         android:hint="H-el kWh /år"
         android:ems="10"
-        android:id="@+id/editText15"
-        android:layout_above="@+id/editText12"
+        android:id="@+id/helKwÅr"
+        android:layout_above="@+id/volym"
         android:layout_alignParentEnd="true" />
 
     <EditText
@@ -136,9 +136,9 @@
         android:inputType="number"
         android:hint="vatten m3"
         android:ems="10"
-        android:id="@+id/editText16"
-        android:layout_alignBaseline="@+id/editText12"
-        android:layout_alignBottom="@+id/editText12"
+        android:id="@+id/vatten"
+        android:layout_alignBaseline="@+id/volym"
+        android:layout_alignBottom="@+id/volym"
         android:layout_alignParentEnd="true" />
 
     <EditText
@@ -147,8 +147,8 @@
         android:inputType="number"
         android:ems="10"
         android:hint="kWh juli mån"
-        android:id="@+id/editText17"
-        android:layout_below="@+id/editText16"
+        android:id="@+id/kwJuli"
+        android:layout_below="@+id/vatten"
         android:layout_marginTop="40dp"
         android:layout_alignParentEnd="true" />
 
@@ -158,7 +158,7 @@
         android:inputType="number"
         android:hint="kWh aug mån"
         android:ems="10"
-        android:id="@+id/editText18"
+        android:id="@+id/kwAug"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="57dp" />
